styling fixes on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,6 @@ body {
     line-height: 0.99em;
     padding: 50px 200px 0px 200px;
     margin: 0 0 100px 0;
-    width: calc(100% - 150px);
     height: auto;
     background-color: #fff;
     z-index: 5;
@@ -183,9 +182,7 @@ body {
     position: relative;
     letter-spacing: -0.02em;
     position: relative;
-    width: 100%;
     height: 100%;
-    width: 100%;
     height: auto;
     z-index: 5;
     background-color: #222 !important;
